--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
+*{
+  font-family: 'Poppins', sans-serif;
+}
+body{
+  background-image: linear-gradient(to right top, white , orange);
+}
+h1{
+  text-align: center;
+  font-family: cursive;
+}
+p{
+ width: 90%;
+ margin: 1em auto;
+}
+.container,
+.cards{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.cards{
+  width: 40%;
+  background-color: #000;
+  color: #fff;
+  box-shadow: 2px 2px 10px #000;
+}
+
+img{
+  width: 90%;
+}
+
+hr{
+  width: 60%;
+  height: 1px;
+  color: #fff;
+}
+
+button{
+  padding: .8em 1.5em;
+  border-radius: 3em;
+  border: none;
+  outline: none;
+  margin-bottom: 1em;
+  font-weight: bold;
+
 }
